# PromeFuzz

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  PromeFuzz.py  README.md  config.template.toml  libraries.template.toml  pyproject.toml  requirements.txt  setup.sh
cli/: analyze.py  comprehend.py  config.py  configure.py  generate.py  preprocess.py  stats.py  test.py
database/: .gitignore  README.md  common.sh  srclink.py
database/c-ares/: build.sh  fetch.sh  lib.toml
database/cjson/: build.sh  fetch.sh  lib.toml
database/cre2/: .gitignore  build.sh  fetch.sh  in  install_deps.sh  lib.toml
database/curl/: .gitignore  build.sh  fetch.sh  install_deps.sh  lib.toml
database/exiv2/: .gitignore  build.sh  fetch.sh  install_deps.sh  lib.toml
database/experiments/: BUG.md  README.md  build_dataset.py  build_example_drivers.py  collect_coverage.py  generate_and_build_drivers.py  run_fuzz.py  utils.py
database/ffjpeg/: .gitignore  CMakeLists.txt  build.sh  fetch.sh  latest.diff  lib.toml
database/lcms/: build.sh  fetch.sh  install_deps.sh  lib.toml
database/libaom/: api_ban_list.json  build.sh  fetch.sh  install_deps.sh  lib.toml
database/libjpeg-turbo/: build.sh  fetch.sh  lib.toml
database/liblouis/: .gitignore  api_hints.json  fetch.sh  install_deps.sh  lib.toml
database/libmagic/: .gitignore  api_hints.json  build.sh  fetch.sh  install_deps.sh  lib.toml
database/libming/: .gitignore  build.sh  fetch.sh  install_deps.sh  lib.toml
database/libpcap/: .gitignore  build.sh  disable_aborts.patch  fetch.sh  install_deps.sh  lib.toml
database/libpng/: build.sh  fetch.sh  lib.toml
database/libtiff/: .gitignore  build.sh  fetch.sh  install_deps.sh  lib.toml
database/libvpx/: .gitignore  api_ban_list.json  build.sh  fetch.sh  lib.toml
database/loguru/: .gitignore  build.sh  fetch.sh  lib.toml
database/ngiflib/: .gitignore  build.sh  fetch.sh  install_deps.sh  lib.toml
database/pugixml/: api_hints.json  build.sh  fetch.sh  lib.toml
database/rapidcsv/: .gitignore  build.sh  fetch.sh  hints.json  lib.toml
database/re2/: api_ban_list.json  build.sh  disable_abseil_debug.patch  fetch.sh  install_deps.sh  lib.toml
database/sqlite3/: .gitignore  Makefile  build.sh  fetch.sh  lib.toml  replace_header.py
database/svgpp/: build.sh  fetch.sh  install_deps.sh  lib.toml
database/tinygltf/: build.sh  fetch.sh  lib.toml  separate_del_and_impl.py
database/utils/: README.md  asan.py  cov.py  crash.py  extract_covered_APIs.py  extract_covered_APIs_ts.py  extract_gcov.py  extraction.py  fuzz.py  fuzz.template.toml  gcov.py  parse_asan.py  plot.py  run_asan.py  run_cov.py  run_gcov.py
database/zlib/: build.sh  fetch.sh  lib.toml
examples/: README.md
examples/c-ares/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/cjson/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/curl/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/exiv2/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/ffjpeg/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/lcms/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/libaom/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/libjpeg-turbo/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/liblouis/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/libmagic/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/libpcap/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/libpng/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/libtiff/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/libvpx/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/loguru/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/ngiflib/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/pugixml/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/rapidcsv/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/re2/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/sqlite3/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/tinygltf/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
examples/zlib/: build_additional_synthesized_driver.sh  build_synthesized_driver.sh
processor/cxx/: .gitignore  CMakeLists.txt  README.md  cgprocessor.cc  cgprocessor.hh  clang-common.hh  preprocessor.cc  preprocessor.hh  processor.hh
processor/cxx/example/: example.cpp  example.h
processor/rust/: rust.py
src/: README.md  utils.py  vars.py
src/analyzer/: asan.py  report.py
src/comprehender/: comprehender.py  knowledge.py
src/configer/: __init__.py  assignments.py  file_io.py  llm_utils.py
src/configurer/: assignments.py  constants.py  file_io.py  llm_utils.py  template.py
src/generator/: collector.py  driver.py  generator.py  learner.py  sanitizer.py  scheduler.py  synthesizer.py  worker.py
src/llm/: llm.py  prompter.py  rag.py
src/preprocessor/: api.py  ast.py  complexity.py  consumer.py  definition.py  dummy.py  incidental.py  information.py  meta.py  relevance.py
src/prompt/: README.md  (+26 more)
(+2154 files in other folders)
