[project]
name = "promefuzz"
version = "0.1.0"
description = "API Functions Fuzz Driver Generator using Large Language Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.5.20",
    "click==8.1.7",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.8",
    "langchain-openai>=0.2.10",
    "loguru==0.7.2",
    "ollama==0.4.7",
    "openai>=1.60.0",
    "parse==1.20.2",
    "tiktoken>=0.8.0",
    "tree-sitter-rust>=0.23.2",
    "tree-sitter>=0.23.2",
    "openpyxl>=3.1.5",
    "unstructured>=0.16.12",
    "markdown>=3.7",
    "chardet>=5.2.0",
    "langchain-unstructured>=0.1.6",
    "libtmux>=0.40.1",
    "matplotlib>=3.10.1",
    "tree-sitter-c==0.23.0",
    "tree-sitter-cpp>=0.23.4",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
